# mlops-vehicle-insurance-

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  setup.py
notebook/: mongoDB_demo.ipynb
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
