[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [
    {name = "Prajwal Shinde", email = "shindeprajwal237@gmail.com"}
]
dynamic = ["dependencies"]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}